--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,4 +1,3 @@
-/* cyrillic-ext */
 @font-face {
   font-family: "Fira Code";
   font-style: normal;
@@ -155,7 +154,7 @@ input:focus {
 
 body {
   font-family: "Fira Code", monospace, "Montserrat", sans-serif;
-  background-color: #fefbfb;
+  background-color: #303030;
 }
 
 html {
@@ -163,7 +162,7 @@ html {
 }
 
 header {
-  background-color: #202020;
+  background-color: #f8f9fb;
 }
 
 header .larguraMaxContainer nav {
@@ -189,7 +188,7 @@ header .larguraMaxContainer nav {
 header .larguraMaxContainer nav .logo {
   font-size: 1.3rem;
   font-weight: 600;
-  color: #fefbfb;
+  color: #303030;
 }
 
 header .larguraMaxContainer nav .nav-list {
@@ -204,7 +203,7 @@ header .larguraMaxContainer nav .nav-list li {
 }
 
 header .larguraMaxContainer nav .nav-list li a {
-  color: #f9f9f9;
+  color: #333333;
   font-size: 1.1rem;
   position: relative;
 }
@@ -218,7 +217,7 @@ header .larguraMaxContainer nav .nav-list li a::after {
   height: 3px;
   bottom: -7px;
   left: 0;
-  background-color: #6610f2;
+  background-color: #fad700;
   -webkit-transform-origin: bottom right;
           transform-origin: bottom right;
   -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.86, 0, 0.07, 1);
@@ -235,7 +234,7 @@ header .larguraMaxContainer nav .nav-list li a:hover::after {
 }
 
 header .larguraMaxContainer nav .nav-list li a:hover {
-  color: #fefbfb;
+  color: #303030;
 }
 
 .mobile-menu {
@@ -246,7 +245,7 @@ header .larguraMaxContainer nav .nav-list li a:hover {
 .mobile-menu div {
   width: 32px;
   height: 2px;
-  background-color: #fefbfb;
+  background-color: #303030;
   margin: 8px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -309,12 +308,12 @@ header .larguraMaxContainer nav .nav-list li a:hover {
     width: 60vw;
     height: 100vh;
     z-index: 999;
-    background-color: #202020;
+    background-color: #f8f9fb;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding: 25px 0px 100px 0px;
+    padding: 25px 0px 25px 0px;
     visibility: hidden;
   }
   header .larguraMaxContainer nav .nav-list li {
@@ -361,7 +360,7 @@ header .larguraMaxContainer nav .nav-list li a:hover {
 }
 
 main #apresentacaoPortfolio {
-  background-color: #181818;
+  background-color: #f4f6fb;
   position: relative;
 }
 
@@ -378,7 +377,7 @@ main #apresentacaoPortfolio .larguraMaxContainer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 90vh;
+  height: 40vh;
   overflow: hidden;
   width: 100%;
   padding: 0px 50px;
@@ -411,7 +410,7 @@ main #apresentacaoPortfolio .larguraMaxContainer #apresentacaoTexto {
 }
 
 main #apresentacaoPortfolio .larguraMaxContainer #apresentacaoTexto h2 {
-  color: #fefbfb;
+  color: #303030;
   font-size: 1.1rem;
   font-weight: 400;
 }
@@ -422,8 +421,8 @@ main #apresentacaoPortfolio .larguraMaxContainer #apresentacaoTexto h2 #nome {
 }
 
 main #apresentacaoPortfolio .larguraMaxContainer #apresentacaoTexto a {
-  background-color: #6610f2;
-  color: #fff;
+  background-color: #fad700;
+  color: #202020;
   padding: 15px 25px;
   max-width: 250px;
   display: -webkit-box;
@@ -447,7 +446,7 @@ main #apresentacaoPortfolio .larguraMaxContainer #apresentacaoTexto a {
 
 main #apresentacaoPortfolio .larguraMaxContainer #apresentacaoTexto a:hover {
   cursor: pointer;
-  background-color: #5429cf;
+  background-color: #fbb800;
 }
 
 main #apresentacaoPortfolio .larguraMaxContainer #apresentacaoFoto {
@@ -507,7 +506,7 @@ main #apresentacaoPortfolio .larguraMaxContainer #apresentacaoFoto .object {
 }
 
 main #sobre {
-  background-color: #202020;
+  background-color: #f8f9fb;
 }
 
 main #sobre .larguraMaxContainer {
@@ -574,7 +573,7 @@ main #sobre .larguraMaxContainer #sobreFoto #figura1 {
   position: absolute;
   top: 40px;
   right: 430px;
-  background-color: #181818;
+  background-color: #f4f6fb;
   border-radius: 10px;
   width: 75px;
   height: 75px;
@@ -584,7 +583,7 @@ main #sobre .larguraMaxContainer #sobreFoto #figura2 {
   position: absolute;
   top: 100px;
   right: 150px;
-  background-color: #181818;
+  background-color: #f4f6fb;
   border-radius: 10px;
   width: 75px;
   height: 75px;
@@ -594,7 +593,7 @@ main #sobre .larguraMaxContainer #sobreFoto #figura3 {
   position: absolute;
   top: 250px;
   right: 450px;
-  background-color: #181818;
+  background-color: #f4f6fb;
   border-radius: 10px;
   width: 75px;
   height: 75px;
@@ -671,14 +670,14 @@ main #sobre .larguraMaxContainer #sobreTexto {
 
 main #sobre .larguraMaxContainer #sobreTexto h2 {
   padding-bottom: 20px;
-  color: #fefbfb;
+  color: #303030;
   font-size: 32px;
   font-weight: 500;
 }
 
 main #sobre .larguraMaxContainer #sobreTexto p {
   line-height: 30px;
-  color: #f9f9f9;
+  color: #333333;
 }
 
 main #sobre .larguraMaxContainer #sobreTexto p:nth-child(2) {
@@ -694,8 +693,8 @@ main #sobre .larguraMaxContainer #sobreTexto div {
 }
 
 main #sobre .larguraMaxContainer #sobreTexto div a {
-  background-color: #6610f2;
-  color: #fff;
+  background-color: #fad700;
+  color: #202020;
   padding: 15px 25px;
   max-width: 250px;
   display: -webkit-box;
@@ -719,7 +718,7 @@ main #sobre .larguraMaxContainer #sobreTexto div a {
 
 main #sobre .larguraMaxContainer #sobreTexto div a:hover {
   cursor: pointer;
-  background-color: #5429cf;
+  background-color: #fbb800;
 }
 
 main #sobre .larguraMaxContainer #sobreTexto div a:nth-child(1) {
@@ -739,7 +738,7 @@ main #sobre .larguraMaxContainer #sobreTexto div a:nth-child(1) {
 main #projetos {
   padding: 100px 50px;
   text-align: center;
-  background-color: #181818;
+  background-color: #f4f6fb;
 }
 
 @media screen and (max-width: 1024px) {
@@ -750,7 +749,7 @@ main #projetos {
 
 main #projetos .larguraMaxContainer h2 {
   padding-bottom: 20px;
-  color: #fefbfb;
+  color: #303030;
   font-size: 32px;
   font-weight: 500;
 }
@@ -775,18 +774,18 @@ main #projetos .larguraMaxContainer article > div {
           flex-grow: 1;
   -ms-flex-preferred-size: calc(33% - 20px);
       flex-basis: calc(33% - 20px);
-  background-color: #202020;
+  background-color: #f8f9fb;
   padding: 40px 25px;
   margin: 10px;
   border-radius: 5px;
   position: relative;
   -webkit-transition: 0.8s all ease;
   transition: 0.8s all ease;
-  border: 3px solid #202020;
+  border: 3px solid #f8f9fb;
 }
 
 main #projetos .larguraMaxContainer article > div:hover {
-  border: 3px solid #6610f2;
+  border: 3px solid #fad700;
 }
 
 @media screen and (max-width: 1124px) {
@@ -805,14 +804,14 @@ main #projetos .larguraMaxContainer article > div:hover {
 
 main #projetos .larguraMaxContainer article > div h3 {
   font-size: 1.2rem;
-  color: #fefbfb;
+  color: #303030;
 }
 
 main #projetos .larguraMaxContainer article > div p {
   line-height: 28px;
   margin: 20px 0px;
   font-size: 1rem;
-  color: #f9f9f9;
+  color: #333333;
 }
 
 main #projetos .larguraMaxContainer article > div > span {
@@ -831,7 +830,7 @@ main #projetos .larguraMaxContainer article > div > span {
 }
 
 main #projetos .larguraMaxContainer article > div > span a {
-  width: 50%;
+  width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
@@ -841,9 +840,9 @@ main #projetos .larguraMaxContainer article > div > span a {
 }
 
 main #projetos .larguraMaxContainer article > div > span button {
-  background-color: #6610f2;
-  padding: 10px 25px;
-  color: #fefbfb;
+  background-color: #fad700;
+  padding: 10px 10px;
+  color: #303030;
   border: 0;
   font-weight: 500;
   font-size: 14px;
@@ -855,6 +854,7 @@ main #projetos .larguraMaxContainer article > div > span button {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
@@ -868,7 +868,7 @@ main #projetos .larguraMaxContainer article > div > span button {
 
 main #projetos .larguraMaxContainer article > div > span button:hover {
   cursor: pointer;
-  background-color: #5429cf;
+  background-color: #fbb800;
 }
 
 main #projetos .larguraMaxContainer article > div > span button .iconify {
@@ -894,21 +894,21 @@ main #projetos .larguraMaxContainer article > div .linguagensProjeto {
 
 main #projetos .larguraMaxContainer article > div .linguagensProjeto span {
   padding: 5px;
-  background-color: #181818;
+  background-color: #f4f6fb;
   border-radius: 5px;
-  color: #fefbfb;
+  color: #303030;
   margin-bottom: 5px;
 }
 
 main #projetos .larguraMaxContainer a {
-  color: #6610f2;
+  color: #fad700;
   font-size: 18px;
 }
 
 main #servicos {
   padding: 100px 50px;
   text-align: center;
-  background-color: #202020;
+  background-color: #f8f9fb;
 }
 
 @media screen and (max-width: 1024px) {
@@ -919,7 +919,7 @@ main #servicos {
 
 main #servicos .larguraMaxContainer h2 {
   padding-bottom: 20px;
-  color: #fefbfb;
+  color: #303030;
   font-size: 32px;
   font-weight: 500;
 }
@@ -937,7 +937,7 @@ main #servicos .larguraMaxContainer article {
 main #servicos .larguraMaxContainer article div {
   text-align: center;
   height: auto;
-  background-color: #181818;
+  background-color: #f4f6fb;
   padding: 40px 30px;
   border-radius: 5px;
   margin: 10px;
@@ -948,11 +948,11 @@ main #servicos .larguraMaxContainer article div {
           flex-grow: 1;
   -webkit-transition: 0.8s all ease;
   transition: 0.8s all ease;
-  border: 3px solid #202020;
+  border: 3px solid #f8f9fb;
 }
 
 main #servicos .larguraMaxContainer article div:hover {
-  border: 3px solid #6610f2;
+  border: 3px solid #fad700;
 }
 
 @media screen and (max-width: 1124px) {
@@ -970,7 +970,7 @@ main #servicos .larguraMaxContainer article div:hover {
 }
 
 main #servicos .larguraMaxContainer article div .iconify {
-  color: #6610f2;
+  color: #fad700;
   font-size: 50px;
   margin: 10px 0px;
 }
@@ -978,18 +978,18 @@ main #servicos .larguraMaxContainer article div .iconify {
 main #servicos .larguraMaxContainer article div h3 {
   font-size: 1.2rem;
   padding: 20px 0px;
-  color: #fefbfb;
+  color: #303030;
 }
 
 main #servicos .larguraMaxContainer article div p {
   line-height: 28px;
   font-size: 1rem;
-  color: #f9f9f9;
+  color: #333333;
 }
 
 main #conhecimentos {
   padding: 100px 50px;
-  background-color: #181818;
+  background-color: #f4f6fb;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1036,7 +1036,7 @@ main #conhecimentos .larguraMaxContainer > div #cards-conhecimentos div:hover .c
 }
 
 main #conhecimentos .larguraMaxContainer > div #cards-conhecimentos div:hover {
-  border-bottom: 6px solid #6610f2;
+  border-bottom: 6px solid #fad700;
   cursor: pointer;
 }
 
@@ -1046,7 +1046,7 @@ main #conhecimentos .larguraMaxContainer > div #cards-conhecimentos div {
       -ms-flex-positive: 1;
           flex-grow: 1;
   height: 150px;
-  background-color: #202020;
+  background-color: #f8f9fb;
   border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1073,12 +1073,12 @@ main #conhecimentos .larguraMaxContainer > div #cards-conhecimentos div .cards-n
   left: 50%;
   -webkit-transform: translate(-50%, 0%);
           transform: translate(-50%, 0%);
-  background-color: #202020;
+  background-color: #f8f9fb;
   padding: 5px;
   height: 30px;
-  width: 125px;
+  width: 300px;
   border-radius: 5px;
-  color: #fefbfb;
+  color: #303030;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1097,12 +1097,12 @@ main #conhecimentos .larguraMaxContainer > div #cards-conhecimentos div .cards-n
   left: 50%;
   -webkit-transform: translate(-50%, 0%);
           transform: translate(-50%, 0%);
-  background-color: #202020;
+  background-color: #f8f9fb;
   padding: 5px;
-  height: auto;
-  width: 125px;
+  height: 300px;
+  width: 100px;
   border-radius: 5px;
-  color: #fefbfb;
+  color: #303030;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1121,23 +1121,23 @@ main #conhecimentos .larguraMaxContainer > div #cards-conhecimentos div .aumento
 
 main #conhecimentos .larguraMaxContainer > div #cards-conhecimentos div .iconify {
   font-size: 68px;
-  color: #6610f2;
+  color: #fad700;
 }
 
 main #conhecimentos .larguraMaxContainer > div #texto-conhecimentos {
-  height: 300px;
+  height: 100px;
 }
 
 main #conhecimentos .larguraMaxContainer > div #texto-conhecimentos h2 {
   margin-bottom: 30px;
-  color: #fefbfb;
+  color: #303030;
   font-size: 32px;
 }
 
 main #conhecimentos .larguraMaxContainer > div #texto-conhecimentos p {
   max-width: 500px;
   line-height: 32px;
-  color: #f9f9f9;
+  color: #333333;
 }
 
 /*
@@ -1193,7 +1193,7 @@ main #conhecimentos .larguraMaxContainer > div #texto-conhecimentos p {
     }
     textarea{
       border: none;
-      background-color: #f0f0f0;
+      background-color: #C0cce6;
       padding: 10px 15px;
       margin-top: 10px;
       font-size: 14px;
@@ -1202,7 +1202,7 @@ main #conhecimentos .larguraMaxContainer > div #texto-conhecimentos p {
       width: 100%;
       height: 40px;
       border-radius: 5px;
-       background-color: #f0f0f0;
+       background-color: #c0cce6;
     }
     #captcha{
       font-size: 20px;
@@ -1210,7 +1210,7 @@ main #conhecimentos .larguraMaxContainer > div #texto-conhecimentos p {
       #campo {
         width: 40px;
         height: 30px;
-        background-color:#ddd;
+        background-color:#98A6C3;
         padding-left: 15px;
         border-radius: 5px;
       }
@@ -1271,7 +1271,7 @@ main #conhecimentos .larguraMaxContainer > div #texto-conhecimentos p {
   position: fixed;
   right: 20px;
   bottom: 20px;
-  background-color: #5429cf;
+  background-color: #fbb800;
   padding: 15px;
   opacity: 0;
   -webkit-transition: all 0.5s ease;
@@ -1288,21 +1288,21 @@ main #conhecimentos .larguraMaxContainer > div #texto-conhecimentos p {
 
 .scrollTop .iconify {
   font-size: 26px;
-  color: #fefbfb;
+  color: #303030;
 }
 
 footer {
   padding: 50px 10px;
   text-align: center;
-  background-color: #181818;
-  color: #fefbfb;
+  background-color: #f4f6fb;
+  color: #303030;
 }
 
 footer span {
-  background-color: #202020;
+  background-color: #f8f9fb;
   padding: 10px 20px;
   border-radius: 20px;
-  color: #fefbfb;
+  color: #303030;
 }
 
 footer span:hover {
@@ -1310,7 +1310,7 @@ footer span:hover {
 }
 
 footer p {
-  color: #fefbfb;
+  color: #303030;
   opacity: 0.5;
   padding: 25px;
   font-size: 1.1rem;
@@ -1347,11 +1347,11 @@ footer div {
 }
 
 footer div a {
-  background-color: #202020;
+  background-color: #f8f9fb;
   padding: 15px 25px;
   margin: 10px;
   border-radius: 5px;
-  color: #fefbfb;
+  color: #303030;
   opacity: 0.5;
 }
 
